# AI_Trader

./: .env.example  .eslintrc.cjs  .gitignore  README.md  TODO_PHASE10.md  eslint.config.cjs  jest.config.cjs  package-lock.json  package.json  stack.sh  tsconfig.json
.github/workflows/: ci.yml
apps/arb-scanner/: Cargo.toml  Dockerfile
apps/arb-scanner/src/: engine.rs  main.rs
apps/arb-scanner/src/strategies/: as_market_maker.rs  atomic_arb.rs  btc_5m_lag.rs  cex_arb.rs  control.rs  convergence_carry.rs  copy_bot.rs  graph_arb.rs  implied_vol.rs  longshot_bias.rs  maker_mm.rs  market_data.rs  market_neutral.rs  mod.rs  obi_scalper.rs  simulation.rs  vol_regime.rs
apps/backend/: .env  Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
config/: live_canary_baseline.env
docs/: AUDIT_REMEDIATION_PLAN.md  BTC_5M_ENGINE.md  PROFIT_SYSTEM_BACKLOG.md  PROFIT_SYSTEM_MASTER_PLAN.md  PROFIT_SYSTEM_TRACKER.md
infrastructure/: curl_response.json  docker-compose.yml  find_btc_markets.py
scripts/: PAPER_SOAK_REPORT.md  STRATEGY_VALIDATION.md  export_feature_dataset.py  live_fire_drill.js  live_paper_checklist.js  paper_long_validation.py  paper_soak_report.js  postgres_backup.sh  postgres_backup_loop.sh  redis_backup.sh  redis_backup_loop.sh  replay_consistency.py  run_feature_export.sh  run_live_fire_drill.sh  run_live_paper_checklist.sh  run_paper_long_validation.sh  run_paper_soak_report.sh  run_replay_consistency.sh  run_signal_model_training.sh  run_strategy_validation.sh  soak_checkpoint_monitor.js  strategy_validation.py  train_signal_model.py
(+110 files in other folders)
