[package]
name = "arb-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
url = "2.5"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
ethers = { version = "=2.0.10", features = ["ws", "openssl", "eip712", "abigen"] }
hex = "0.4"
anyhow = "1.0"
home = "=0.5.5"
base64ct = "=1.6.0"
time = "=0.3.36"
async-trait = "0.1"
getrandom = "=0.2.14"
rand = "=0.8.5"
regex = "1.10"
statrs = "0.16"
uuid = { version = "1.7", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
